--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <groupId>org.bigsolr</groupId>
     <artifactId>bigsolr</artifactId>
     <packaging>jar</packaging>
-    <version>0.1</version>
+    <version>1.0-cdh5.7.2</version>
     <name>BigSolr</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <scala.version>2.10.6</scala.version>
         <hadoop.version>2.6.0-cdh5.7.2</hadoop.version>
         <spark.version>1.6.0-cdh5.7.2</spark.version>
