--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bigsolr</groupId>
     <artifactId>bigsolr</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-cdh5.7.2</version>
+    <version>1.0.1-cdh5.7.0</version>
     <name>BigSolr</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <scala.version>2.10.6</scala.version>
-        <hadoop.version>2.6.0-cdh5.7.2</hadoop.version>
-        <spark.version>1.6.0-cdh5.7.2</spark.version>
-        <solr.version>4.10.3-cdh5.7.2</solr.version>
+        <hadoop.version>2.6.0-cdh5.7.0</hadoop.version>
+        <spark.version>1.6.0-cdh5.7.0</spark.version>
+        <solr.version>4.10.3-cdh5.7.0</solr.version>
     </properties>
 
     <repositories>
@@ -30,14 +31,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
+<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
+                <configuration>
+                    <finalName>${project.artifactId}-assembly-${project.version}</finalName>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -116,6 +121,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
